--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "kamix",
-            "homepage": "https://github.com/kamix",
+            "homepage": "https://github.com/kamix"
         }
     ],
     "autoload": {
