--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "~2.6"
+        "symfony/symfony": "~2.6 || ^3.0"
     },
     "require-dev": {
     },
